# Linux_Programming_Practice

./: .gitignore  README.md
01_buff_benchmark/src/: main.c
01_buff_benchmark/tools/: test_buffer.sh
02_hello/: Makefile  hello.c  hello2.c  hello3.c  hello4.c  retrun_status.c
03_objdump/: Makefile  my_data.txt  test_obj.c
04_struct_offset_zero_length_array/: Makefile  struct.c
05_int_overflow/: Makefile  int_overflow.c
06_inline_func/: Makefile  inline_test.c
07_unlink_tempfile/: Makefile  ulink.c
08_autoconf/: configure.ac
08_autoconf/include/: libb.h
08_autoconf/libs/: Makefile.am
08_autoconf/src/: Makefile.am  test.c
09_autoconf/: configure.ac
09_autoconf/libs/: Makefile.am
09_autoconf/src/: Makefile.am  test.c
09_libtool/: Makefile
09_libtool/include/: liba.h
09_libtool/libs/: Makefile  liba.c  libb.c
09_libtool/src/: Makefile  test.c
10_package_deb_files/: README.md  auto_pack.sh
10_package_deb_files/autotools/: auto_pack_create_orig.sh  auto_pack_multi.sh  auto_pack_trad.sh
10_package_deb_files/autotools/debian/: control  testautotools-dev.install  testautotools.install
10_package_deb_files/cmake/: auto_pack_create_orig.sh  auto_pack_trad.sh
11_gettext/: Makefile  test_gettext.c  zh_TW.po-example  zh_TW.po-example-fuzzy
12_cmake/: CMakeLists.txt  readme.txt
12_cmake/include/: CMakeLists.txt
12_cmake/libs/: CMakeLists.txt  libb.c
12_cmake/src/: CMakeLists.txt
12_cmake/test_syntax/: CMakeLists.txt
13_makefile_header/: Makefile
14_buff_overflow/: Makefile  buf_overflow.c
15_leak/: leak.c  test_leak.sh
16_global_var/: Makefile  main.c  var_1.c
17_inline_asm_arm7/: Makefile  asm.c
18_gdb_static_debug/: readme.txt  same_func1.c  test_all.sh  test_same_func.c
buff_benchmark/: Makefile
buff_benchmark/src/: main.c
buff_benchmark/tools/: generate_test_file.sh
